save the users that sign in to our mongo database

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_ID=32933475060-eme0jbbcldvn286bti7a22cpdien2qht.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 BUNSBY_MONGO_USER=yyAccTxMNvPz6Oxy
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.wexhxza.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://bunsby:yyAccTxMNvPz6Oxy@cluster0.wexhxza.mongodb.net/?retryWrites=true&w=majority
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
